--- a/XivRes.Example/XivRes.Example.vcxproj.filters
+++ b/XivRes.Example/XivRes.Example.vcxproj.filters
@@ -4,6 +4,6 @@
     <None Include="vcpkg.json" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Example.cpp" />
+    <ClCompile Include="resource_unpack_and_pack.cpp" />
   </ItemGroup>
 </Project>
