--- a/xivres/XivRes.vcxproj
+++ b/xivres/XivRes.vcxproj
@@ -32,6 +32,7 @@
     <ClInclude Include="include\xivres\Fontdata.h" />
     <ClInclude Include="include\xivres\installation.h" />
     <ClInclude Include="include\xivres\Imc.h" />
+    <ClInclude Include="include\xivres\path_spec.h" />
     <ClInclude Include="include\xivres\util.byte_order.h" />
     <ClInclude Include="include\xivres\util.on_dtor.h" />
     <ClInclude Include="include\xivres\util.dxt.h" />
@@ -51,32 +52,30 @@
     <ClInclude Include="include\xivres\ScdWriter.h" />
     <ClInclude Include="include\xivres\xivstring.h" />
     <ClInclude Include="include\xivres\Scd.h" />
-    <ClInclude Include="include\xivres\Sqpack.h" />
+    <ClInclude Include="include\xivres\sqpack.h" />
     <ClInclude Include="include\xivres\packed_stream.standard.h" />
-    <ClInclude Include="include\xivres\BinaryPackedFileStreamDecoder.h" />
-    <ClInclude Include="include\xivres\SqpackGenerator.h" />
-    <ClInclude Include="include\xivres\EmptyOrObfuscatedPackedFileStream.h" />
-    <ClInclude Include="include\xivres\EmptyOrObfuscatedPackedFileStreamDecoder.h" />
+    <ClInclude Include="include\xivres\unpacked_stream.standard.h" />
+    <ClInclude Include="include\xivres\sqpack.generator.h" />
+    <ClInclude Include="include\xivres\packed_stream.placeholder.h" />
+    <ClInclude Include="include\xivres\unpacked_stream.placeholder.h" />
     <ClInclude Include="include\xivres\packed_stream.h" />
-    <ClInclude Include="include\xivres\PackedFileUnpackingStream.h" />
-    <ClInclude Include="include\xivres\HotSwappablePackedFileStream.h" />
+    <ClInclude Include="include\xivres\unpacked_stream.h" />
+    <ClInclude Include="include\xivres\packed_stream.hotswap.h" />
     <ClInclude Include="include\xivres\packed_stream.model.h" />
-    <ClInclude Include="include\xivres\ModelPackedFileStreamDecoder.h" />
-    <ClInclude Include="include\xivres\StreamAsPackedFileViewStream.h" />
-    <ClInclude Include="include\xivres\SqpackReader.h" />
-    <ClInclude Include="include\xivres\SqpackStreamDecoder.h" />
+    <ClInclude Include="include\xivres\unpacked_stream.model.h" />
+    <ClInclude Include="include\xivres\sqpack.reader.h" />
     <ClInclude Include="include\xivres\packed_stream.texture.h" />
-    <ClInclude Include="include\xivres\TexturePackedFileStreamDecoder.h" />
+    <ClInclude Include="include\xivres\unpacked_stream.texture.h" />
     <ClInclude Include="include\xivres\Texture.h" />
     <ClInclude Include="include\xivres\TextureStream.h" />
     <ClInclude Include="include\xivres\util.unicode.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="impl\packed_stream.standard.cpp" />
-    <ClCompile Include="impl\BinaryPackedFileStreamDecoder.cpp" />
+    <ClCompile Include="impl\unpacked_stream.standard.cpp" />
     <ClCompile Include="impl\common.cpp" />
-    <ClCompile Include="impl\EmptyOrObfuscatedPackedFileStream.cpp" />
-    <ClCompile Include="impl\EmptyOrObfuscatedPackedFileStreamDecoder.cpp" />
+    <ClCompile Include="impl\unpacked_stream.placeholder.cpp" />
+    <ClCompile Include="impl\packed_stream.placeholder.cpp" />
     <ClCompile Include="impl\Eqdp.cpp" />
     <ClCompile Include="impl\EqpGmp.cpp" />
     <ClCompile Include="impl\Est.cpp" />
@@ -84,7 +83,7 @@
     <ClCompile Include="impl\excel.type2gen.cpp" />
     <ClCompile Include="impl\Fontdata.cpp" />
     <ClCompile Include="impl\installation.cpp" />
-    <ClCompile Include="impl\HotSwappablePackedFileStream.cpp" />
+    <ClCompile Include="impl\packed_stream.hotswap.cpp" />
     <ClCompile Include="impl\Imc.cpp" />
     <ClCompile Include="impl\util.bitmap_copy.cpp" />
     <ClCompile Include="impl\util.dxt.cpp" />
@@ -93,22 +92,20 @@
     <ClCompile Include="impl\stream.cpp" />
     <ClCompile Include="impl\MipmapStream.cpp" />
     <ClCompile Include="impl\packed_stream.model.cpp" />
-    <ClCompile Include="impl\ModelPackedFileStreamDecoder.cpp" />
+    <ClCompile Include="impl\unpacked_stream.model.cpp" />
     <ClCompile Include="impl\packed_stream.cpp" />
-    <ClCompile Include="impl\PackedFileUnpackingStream.cpp" />
+    <ClCompile Include="impl\unpacked_stream.cpp" />
     <ClCompile Include="impl\PixelFormats.cpp" />
     <ClCompile Include="impl\Scd.cpp" />
     <ClCompile Include="impl\ScdReader.cpp" />
     <ClCompile Include="impl\ScdWriter.cpp" />
     <ClCompile Include="impl\xivstring.cpp" />
-    <ClCompile Include="impl\Sqpack.cpp" />
-    <ClCompile Include="impl\SqpackGenerator.cpp" />
-    <ClCompile Include="impl\SqpackReader.cpp" />
-    <ClCompile Include="impl\SqpackStreamDecoder.cpp" />
-    <ClCompile Include="impl\StreamAsPackedFileViewStream.cpp" />
+    <ClCompile Include="impl\sqpack.cpp" />
+    <ClCompile Include="impl\sqpack.generator.cpp" />
+    <ClCompile Include="impl\sqpack.reader.cpp" />
     <ClCompile Include="impl\Texture.cpp" />
     <ClCompile Include="impl\packed_stream.texture.cpp" />
-    <ClCompile Include="impl\TexturePackedFileStreamDecoder.cpp" />
+    <ClCompile Include="impl\unpacked_stream.texture.cpp" />
     <ClCompile Include="impl\TextureStream.cpp" />
     <ClCompile Include="impl\util.unicode.cpp" />
   </ItemGroup>
