--- a/xivres.fontgen/xivres.fontgen.vcxproj
+++ b/xivres.fontgen/xivres.fontgen.vcxproj
@@ -27,31 +27,31 @@
     <None Include="vcpkg.json" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\xivres.fontgen\DirectWriteFixedSizeFont.h" />
-    <ClInclude Include="include\xivres.fontgen\FontdataPacker.h" />
-    <ClInclude Include="include\xivres.fontgen\FreeTypeFixedSizeFont.h" />
-    <ClInclude Include="include\xivres.fontgen\GameFontdataFixedSizeFont.h" />
-    <ClInclude Include="include\xivres.fontgen\IFixedSizeFont.h" />
+    <ClInclude Include="include\xivres.fontgen\directwrite_fixed_size_font.h" />
+    <ClInclude Include="include\xivres.fontgen\fontdata_packer.h" />
+    <ClInclude Include="include\xivres.fontgen\freetype_fixed_size_font.h" />
+    <ClInclude Include="include\xivres.fontgen\fontdata_fixed_size_font.h" />
+    <ClInclude Include="include\xivres.fontgen\fixed_size_font.h" />
     <ClInclude Include="include\xivres.fontgen\TeamHypersomnia-rectpack2D\src\best_bin_finder.h" />
     <ClInclude Include="include\xivres.fontgen\TeamHypersomnia-rectpack2D\src\empty_spaces.h" />
     <ClInclude Include="include\xivres.fontgen\TeamHypersomnia-rectpack2D\src\empty_space_allocators.h" />
     <ClInclude Include="include\xivres.fontgen\TeamHypersomnia-rectpack2D\src\finders_interface.h" />
     <ClInclude Include="include\xivres.fontgen\TeamHypersomnia-rectpack2D\src\insert_and_split.h" />
     <ClInclude Include="include\xivres.fontgen\TeamHypersomnia-rectpack2D\src\rect_structs.h" />
-    <ClInclude Include="include\xivres.fontgen\MergedFixedSizeFont.h" />
-    <ClInclude Include="include\xivres.fontgen\TextMeasurer.h" />
+    <ClInclude Include="include\xivres.fontgen\merged_fixed_size_font.h" />
+    <ClInclude Include="include\xivres.fontgen\text_measurer.h" />
     <ClInclude Include="include\xivres.fontgen\util.truetype.h" />
-    <ClInclude Include="include\xivres.fontgen\WrappingFixedSizeFont.h" />
+    <ClInclude Include="include\xivres.fontgen\wrapping_fixed_size_font.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="impl\DirectWriteFixedSizeFont.cpp" />
-    <ClCompile Include="impl\FontdataPacker.cpp" />
-    <ClCompile Include="impl\FreeTypeFixedSizeFont.cpp" />
-    <ClCompile Include="impl\GameFontdataFixedSizeFont.cpp" />
-    <ClCompile Include="impl\IFixedSizeFont.cpp" />
-    <ClCompile Include="impl\MergedFixedSizeFont.cpp" />
-    <ClCompile Include="impl\TextMeasurer.cpp" />
-    <ClCompile Include="impl\WrappingFixedSizeFont.cpp" />
+    <ClCompile Include="impl\directwrite_fixed_size_font.cpp" />
+    <ClCompile Include="impl\fontdata_packer.cpp" />
+    <ClCompile Include="impl\freetype_fixed_size_font.cpp" />
+    <ClCompile Include="impl\fontdata_fixed_size_font.cpp" />
+    <ClCompile Include="impl\fixed_size_font.cpp" />
+    <ClCompile Include="impl\merged_fixed_size_font.cpp" />
+    <ClCompile Include="impl\text_measurer.cpp" />
+    <ClCompile Include="impl\wrapping_fixed_size_font.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
