--- a/xivres.fontgen/xivres.fontgen.vcxproj.filters
+++ b/xivres.fontgen/xivres.fontgen.vcxproj.filters
@@ -27,10 +27,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\xivres.fontgen\FontdataPacker.h">
+    <ClInclude Include="include\xivres.fontgen\fontdata_packer.h">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="include\xivres.fontgen\TextMeasurer.h">
+    <ClInclude Include="include\xivres.fontgen\text_measurer.h">
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="include\xivres.fontgen\TeamHypersomnia-rectpack2D\src\rect_structs.h">
@@ -54,48 +54,48 @@
     <ClInclude Include="include\xivres.fontgen\util.truetype.h">
       <Filter>Headers\util</Filter>
     </ClInclude>
-    <ClInclude Include="include\xivres.fontgen\WrappingFixedSizeFont.h">
+    <ClInclude Include="include\xivres.fontgen\wrapping_fixed_size_font.h">
       <Filter>Headers\fixed_size_font</Filter>
     </ClInclude>
-    <ClInclude Include="include\xivres.fontgen\MergedFixedSizeFont.h">
+    <ClInclude Include="include\xivres.fontgen\merged_fixed_size_font.h">
       <Filter>Headers\fixed_size_font</Filter>
     </ClInclude>
-    <ClInclude Include="include\xivres.fontgen\IFixedSizeFont.h">
+    <ClInclude Include="include\xivres.fontgen\fixed_size_font.h">
       <Filter>Headers\fixed_size_font</Filter>
     </ClInclude>
-    <ClInclude Include="include\xivres.fontgen\GameFontdataFixedSizeFont.h">
+    <ClInclude Include="include\xivres.fontgen\fontdata_fixed_size_font.h">
       <Filter>Headers\fixed_size_font</Filter>
     </ClInclude>
-    <ClInclude Include="include\xivres.fontgen\FreeTypeFixedSizeFont.h">
+    <ClInclude Include="include\xivres.fontgen\freetype_fixed_size_font.h">
       <Filter>Headers\fixed_size_font</Filter>
     </ClInclude>
-    <ClInclude Include="include\xivres.fontgen\DirectWriteFixedSizeFont.h">
+    <ClInclude Include="include\xivres.fontgen\directwrite_fixed_size_font.h">
       <Filter>Headers\fixed_size_font</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="impl\DirectWriteFixedSizeFont.cpp">
+    <ClCompile Include="impl\directwrite_fixed_size_font.cpp">
       <Filter>Impls</Filter>
     </ClCompile>
-    <ClCompile Include="impl\FontdataPacker.cpp">
+    <ClCompile Include="impl\fontdata_packer.cpp">
       <Filter>Impls</Filter>
     </ClCompile>
-    <ClCompile Include="impl\FreeTypeFixedSizeFont.cpp">
+    <ClCompile Include="impl\freetype_fixed_size_font.cpp">
       <Filter>Impls</Filter>
     </ClCompile>
-    <ClCompile Include="impl\GameFontdataFixedSizeFont.cpp">
+    <ClCompile Include="impl\fontdata_fixed_size_font.cpp">
       <Filter>Impls</Filter>
     </ClCompile>
-    <ClCompile Include="impl\IFixedSizeFont.cpp">
+    <ClCompile Include="impl\fixed_size_font.cpp">
       <Filter>Impls</Filter>
     </ClCompile>
-    <ClCompile Include="impl\MergedFixedSizeFont.cpp">
+    <ClCompile Include="impl\merged_fixed_size_font.cpp">
       <Filter>Impls</Filter>
     </ClCompile>
-    <ClCompile Include="impl\TextMeasurer.cpp">
+    <ClCompile Include="impl\text_measurer.cpp">
       <Filter>Impls</Filter>
     </ClCompile>
-    <ClCompile Include="impl\WrappingFixedSizeFont.cpp">
+    <ClCompile Include="impl\wrapping_fixed_size_font.cpp">
       <Filter>Impls</Filter>
     </ClCompile>
   </ItemGroup>
